--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,17 +1,15 @@
-cmake_minimum_required(VERSION 2.6)
+
 project(httpserverqt)
-find_package(Qt4 REQUIRED)
+cmake_minimum_required(VERSION 2.8)
+cmake_policy(SET CMP0020 NEW)
+set(CMAKE_AUTOMOC ON)
+find_package(Qt5 REQUIRED COMPONENTS Core Network )
+add_library(httpserverqt STATIC HTTPServerQT.cpp HTTPServerQT.h httpserver.cpp httpserver.h httpclient.cpp httpclient.h)
+include_directories(${QT_INCLUDES} ${CMAKE_CURRENT_BINARY_DIR} )
 
-enable_testing()
 
-include_directories(${QT_INCLUDES} ${CMAKE_CURRENT_BINARY_DIR})
+  
 
-set(HTTPServerQT_SRCS HTTPServerQT.cpp main.cpp)
+qt5_use_modules(httpserverqt Core Network )
 
-qt4_automoc(${HTTPServerQT_SRCS})
-add_executable(httpserverqt ${HTTPServerQT_SRCS})
-target_link_libraries(httpserverqt ${QT_QTCORE_LIBRARY})
-
-add_subdirectory(tests)
-
-install(TARGETS httpserverqt RUNTIME DESTINATION bin)
+#install(TARGETS httpserverqt RUNTIME DESTINATION lib)
